# SentraGuard-Lite

./: .env  .gitignore  DESIGN_NOTES.md  Dockerfile  Dockerfile.streamlit  README.md  cli.py  docker-compose.yml  env.example  out.json  policy.yaml  pyproject.toml  requirements.txt  sample_request.json  streamlit_app.py
app/: analyzer.py  audit.py  config.py  main.py  models.py  policy_engine.py  registry.py
app/detectors/: base.py  pii.py  prompt_injection.py  rag_injection.py
app/middleware/: auth.py  rate_limit.py
app/patterns/: pii.yaml  prompt_injection.yaml  rag_injection.yaml
app/policy/: default.yaml
app/policy/tenants/: bfsi.yaml  developer.yaml  healthcare.yaml
tests/: case_loader.py  test_api.py  test_detectors.py  test_e2e.py  test_policy_engine.py  test_required.py
tests/pii/: pii_cases.json
tests/prompt/: prompt_cases.json
tests/rag/: rag_cases.json
tests/regression/: case_001.json  case_002.json
tests/unit/: test_pii.py  test_prompt_injection.py  test_rag_injection.py
