[project]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "pyyaml",
    "streamlit",
    "requests",
    "plotly",
    "phonenumbers>=8.13,<9",
]

[project.optional-dependencies]
pii-ner = [
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.7,<4",
    # After installing this group, download the spaCy model:
    # python -m spacy download en_core_web_lg
]

semantic = [
    "transformers>=4.41,<5",
    "torch>=2.2",
]

all = [
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.7,<4",
    "transformers>=4.41,<5",
    "torch>=2.2",
]